@@ -1,3 +1,7 @@
+2008-09-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* UnicodeChecker.pm: New module.
+
 2008-09-10  Wakaba  <wakaba@suika.fam.cx>
 
 	* DecodeHandle.pm: Set error levels.
